--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,42 +1,79 @@
-<!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-    font-family: Tahoma, Geneva, sans-serif;
-}
-div {
-    display: inline;
-}
-</style>
-<script>
-var host = window.document.location.host.replace(/:.*/, '');
-var ws = new WebSocket('ws://' + host + ':8080');
-ws.onmessage = function (event) {
-    console.log(event.data);
-};
-
-ws.onopen = function(event){
-    ws.send("{\"Action\": \"register_client\", \"Payload\": \"1\"}");
-}
-
-</script>
+<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://cdn.rawgit.com/maclennann/jquery-simplevalidator/ea06b7a8b939173722808021d12a05aa6dbc9404/jquery-simplevalidator.js"></script>
 </head>
-<body>
-    <input id='query' type='text'></input><button id="squery">query</button>
-    <input id='fact' type='text'></input><button id="sfact">fact</button>
+<body style="margin-left:20px">
+    <h3>Demo 1</h3>
+    <input id="input" type="text" value="select * from deb_packages where name='bash'" />
+    <input type="radio" name="qtype" id="query" value="query" checked="checked"/>Query
+    <input type="radio" name="qtype" id="fact" value="fact"/>Fact
+    <button id="action" type="submit">do it? </button>
+    <br/>
+    <span id="output"></span>
 
 
-    <script>
+    <script type="text/javascript">
+    $(function() {
+        var queryRunner = function(text) {
+            var action = $('input[name=qtype]:checked').val();
+            var deferred = new $.Deferred();
 
-    document.getElementById("squery").addEventListener("click",function(){
-        var query = document.getElementById("query").value;
-        ws.send("{ \"Action\": \"query\", \"Payload\": \""+query+"\"}");
-    });
+            // Post the query!
+            var resp = $.ajax({
+                url: "http://localhost:8080/query",
+                contentType: 'application/json',
+                dataType: 'json',
+                type: "POST",
+                data: JSON.stringify({Action: action, Payload: text})
+            });
 
-    document.getElementById("sfact").addEventListener("click",function(){
-        var fact = document.getElementById("fact").value;
-        ws.send("{ \"Action\": \"fact\", \"Payload\": \""+fact+"\"}");
+            // Once we have the Guid, wait 3 seconds for the query to finish
+            // (default server timeout is 2) and query for the results
+            resp.done(function(result){
+                queryResults(result.Guid).done(deferred.resolve);
+            });
+
+            return deferred.promise();
+        };
+
+        var queryResults = function(guid){
+            var deferred = new $.Deferred();
+
+            // After 3 seconds, check our query status
+            // for now, we'll just assume it's done.
+            setTimeout(function(){
+                console.log("checking status!");
+                var final = $.ajax({
+                    url: "http://localhost:8080/query/"+guid,
+                    contentType: 'application/json',
+                    dataType: 'json',
+                    type: "GET"
+                });
+
+                final.done(function(answer){
+                    var answerString = "";
+
+                    // Make some HTML out of the results
+                    answer.forEach(function (a){
+                        answerString = answerString + "Host: " + a.Hostname + "<br/>";
+                        var payload = JSON.parse(a.Payload)["1"];
+                        answerString = answerString + "Package: " + payload.name + "<br/>";
+                        answerString = answerString + "Version: " + payload.version + "<br/>";
+                        answerString = answerString + "<br/><br/>";
+                    })
+                    deferred.resolve(answerString);
+                });
+            }, 3000);
+
+            return deferred.promise();
+        }
+
+        // https://github.com/maclennann/jquery-simplevalidator
+        $("#action").simpleValidator("#input", "#output", queryRunner);
     });
     </script>
 </body>
