accept ws endpoint as argv, nicer looking output

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -40,6 +40,8 @@
                     <input type="radio" name="qtype" id="fact" value="fact"/>Fact<br/>
                     <button id="action" type="submit">Run Query </button>
                 </div>
+            </div>
+            <div class="row"
                 <div class="col-lg-6" style="margin-top:50px">
                     <span id="output"></span>
                 </div>
