--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dashiell - Interrogate Your Servers!">
     <meta name="author" content="Norm MacLennan">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dashiell - Interrogate Your Servers!</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dashiell.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -47,11 +47,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <br/>
                         <span class="skills">A Websockets Frontend For Server Interrogation</span>
                     </div>
+                    <img class="img-responsive" src="img/demo.gif" alt="">
                 </div>
             </div>
         </div>
@@ -63,21 +62,21 @@
             <div class="row">
                 <div class="col-lg-3 col-lg-push-9">
                     <h3>Links:</h3>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><a href="https://github.com/maclennann/dashiell">Dashiell On GitHub</a></li>
                         <li><a href="https://github.com/maclennann/dashiell/blob/master/README.md#want-to-try-it">Try Dashiell</a></li>
                         <li><a href="http://en.wikipedia.org/wiki/Dashiell_Hammett">Dashiell Hammet on Wikipedia</a></li>
                     </ul>
                     <br/>
                     <h3>Related Projects:</h3>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><a href="http://osquery.io">OSQuery</a></li>
                         <li><a href="https://github.com/puppetlabs/cfacter">Facter</a></li>
                         <li><a href="http://www.zaphoyd.com/websocketpp">websocketpp</a></li>
                     </ul>
                     <br/>
                     <h3>Contributors:</h3>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li>
                             Norm MacLennan
                             <ul>
@@ -85,77 +84,71 @@
                                 <li><a href="http://twitter.com/nromdotcom">@nromdotcom</a></li>
                                 <li><a href="http://github.com/maclennann">github</a></li>
                             </ul>
+                            Mat Elder
+                            <ul>
+                                <li><a href="http://twitter.com/muteldar">@muteldar</a></li>
+                                <li><a href="http://github.com/n00bworks">github</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-9 col-lg-pull-3">
                     <div class="">
-                        <div class="">
-                            <div class="col-lg-12">
-                                <h2>Dashiell?</h2><br/>
+                        <div class="col-lg-12">
+                            <div class="heading">
+                                <h2>What is Dashiell?</h2>
                             </div>
                         </div>
                         <div class="">
-                            <div class="col-lg-8">
+                            <div class="col-lg-12">
+                                <p class="lead">Dashiell is a websockets frontend for server interrogation.</p>
                                 <p>
-                                    Dashiell is a websockets frontend for server interrogation.
-                                    <br/><br/>
                                     It allows a system administrator to easily interrogate a fleet of servers
                                     for any kind of information and aggregate it all in one place.
                                 </p>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="thumbnail">
-                                    <a href="img/diagram.png" target=_new>
-                                        <img src="img/diagram-thumb.png" border=1px/>
-                                    </a>
-                                    <div class="caption">Distribute queries to your servers</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="">
-                            <div class="col-lg-12">
-                                <p>
-                                    The <mono>dashiell-client</mono> runs on each server in your fleet.
+                                <p>       
+                                    The <strong>dashiell-client</strong> runs on each server in your fleet.
                                     It is written entirely in C++ and is based on great open source
                                     applications like <a href="http://osquery.io">osquery</a> and
                                     <a href="https://github.com/puppetlabs/cfacter">cfacter</a>, so
                                     it is designed to have a small footprint and not impact your
                                     servers' performance.
                                 </p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="col-lg-12">
                                 <p>
-                                    The <mono>dashiell-server</mono> is a nodejs webserver that must
+                                    The <strong>dashiell-server</strong> is a nodejs webserver that must
                                     run on its own server. This provides a lightweight website with
                                     an API for querying each of your agents, as well as running the
                                     websockets server used to communicate with your agents.
                                 </p>
                             </div>
                         </div>
-                        <div class="">
-                            <div class="col-lg-12">
-                                <h3>How does it work?</h3>
+                        <div class="col-lg-12">
+                            <div class="heading">
+                                <h2>How does it work?</h2>
                             </div>
                         </div>
                         <div class="">
-                            <div class="col-lg-4">
-                                <div class="thumbnail">
-                                    <a href="img/demo.gif" target=_new>
-                                        <img src="img/demo-thumb.png" border=1px/>
-                                    </a>
-                                    <div class="caption">Query your servers from the comfort of your browser</div>
+                            <div class="col-lg-12">
+                                <p class="lead">
+                                    See the diagram below.
+                                </p>
+                                <div class="diagram">
+                                    <img class="img-responsive" src="img/diag.png"/>
                                 </div>
-                            </div>
-                            <div class="col-lg-8">
                                 <p>
-                                    See the diagram above or the demo below.
-                                    <br/><br/>
                                     You, the end user, can use the web application or use the API
                                     directly. You can make osquery queries or lookup facts in facter.
-                                    <br/><br/>
-                                    Queries are distributed to the agents via websocket by dashiell-server.
+                                </p>
+                                <p>
+                                    Queries are distributed to the agents via websocket by <strong>dashiell-server</strong>.
                                     Results are aggregated and made available to the user via the API and
                                     web applications.
-                                    <br/><br/>
+                                </p>
+                                <p>
                                     Future versions will provide scheduled queries, result persistence, and
                                     other features with the addition of a reporting database. Eventually,
                                     Dashiell will be able to be used as a lightweight inventory management
