fixing viewport and image alignment

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dashiell - Interrogate Your Servers!">
     <meta name="author" content="Norm MacLennan">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Dashiell - Interrogate Your Servers!</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
@@ -137,7 +137,7 @@
                                     See the diagram below.
                                 </p>
                                 <div class="diagram">
-                                    <img class="img-responsive" src="img/diag.png"/>
+                                    <img class="img-responsive img-centered" src="img/diag.png"/>
                                 </div>
                                 <p>
                                     You, the end user, can use the web application or use the API
